REGRESSION: WebGL doesn't show up in CSS reflections https://bugs.webkit.org/show_bug.cgi?id=76489

Patch by Antoine Quint <graouts@apple.com> on 2016-06-03
Reviewed by Dean Jackson.

Source/WebCore:

The WebGLLayer needs to notify its owning GraphicsLayer that it was displayed
such that its clones, in GraphicsLayerCA::layerDidDisplay, may have their contents
updated to match that layer's contents. The test at compositing/webgl/webgl-reflection.html
already covers this test and its expectation on Mac has been updated.

* platform/graphics/mac/WebGLLayer.mm:
(-[WebGLLayer display]):

LayoutTests:

Update the expected rendering to contain the reflected WebGL <canvas>.

* platform/mac/compositing/webgl/webgl-reflection-expected.png:

Canonical link: https://commits.webkit.org/176425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201639 268f45cc-cd09-0410-ab3c-d52691b4dbfc